Add perspective to garden

--- a/startup-html/garden.css
+++ b/startup-html/garden.css
@@ -1,8 +1,20 @@
+.garden-grid {
+    transform: rotateZ(45deg) rotate3d(1, -1, 0, 70deg);
+    transform-origin: bottom center;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.garden-row {
+    width: 500px;
+    white-space: nowrap;
+}
+
 .tile {
-        width: 100px;
-        height: 100px;
-        background-color: lightgray;
-        border: 1px solid black;
-        transform: rotateZ(45deg) rotate3d(1, -1, 0, 70deg);
-        transform-origin: bottom center;
-    }
+    width: 100px;
+    height: 100px;
+    background-color: lightgray;
+    border: 1px solid black;
+    position: relative;
+    display: inline-block;
+}
