--- a/startup-html/garden.css
+++ b/startup-html/garden.css
@@ -1,13 +1,19 @@
 .garden-grid {
-    transform: rotateZ(45deg) rotate3d(1, -1, 0, 70deg);
-    transform-origin: bottom center;
+    transform: rotateZ(45deg) rotate3d(1, -1, 0, 60deg);
+    transform-origin: center;
     display: inline-block;
     vertical-align: middle;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    text-align: center;
 }
 
 .garden-row {
     width: 500px;
     white-space: nowrap;
+    font-size:0;
 }
 
 .tile {
@@ -17,4 +23,8 @@
     border: 1px solid black;
     position: relative;
     display: inline-block;
+}
+
+.tile:hover {
+    background-color: gray;
 }
