--- a/startup-html/garden.css
+++ b/startup-html/garden.css
@@ -1,24 +1,23 @@
 .garden-grid {
+    /*Isometric view*/
     transform: rotateZ(45deg) rotate3d(1, -1, 0, 60deg);
     transform-origin: center;
+
     display: inline-block;
     vertical-align: middle;
-    width: 100vw;
-    left: 0;
-    top: 0;
-    text-align: center;
+    position: absolute;
 }
 
 .garden-row {
-    width: 500px;
-    height: 100%;
+    width: 50vw;
+    height: 10vw;
     white-space: nowrap;
     font-size:0;
 }
 
 .tile {
-    width: 100px;
-    height: 100px;
+    width: 10vw;
+    height: 10vw;
     background-color: lightgray;
     border: 1px solid black;
     position: relative;
