--- a/startup-html/main.css
+++ b/startup-html/main.css
@@ -52,3 +52,27 @@ footer a {
     flex: 1 100vh;
   }
 }
+
+.btn-primary {
+    background-color: orangered !important;
+    border-color: orangered !important;
+}
+
+.btn-outline-primary {
+  color: orangered !important;
+  border-color: orangered !important;
+}
+
+.btn-outline-primary:hover {
+  background-color: orangered !important;
+  color: white !important;
+  border-color: orangered !important;
+}
+
+.btn-outline-primary:focus,
+.btn-outline-primary.active {
+  box-shadow: 0 0 0 0.25rem rgba(orangered, 0.5) !important;
+  border-color: orangered !important;
+  color: white !important;
+  background-color: orangered !important;
+}
