--- a/src/garden/garden.css
+++ b/src/garden/garden.css
@@ -1,3 +1,8 @@
+.garden-title {
+    text-align: center;
+    vertical-align: top;
+}
+
 .garden-grid {
     /*Isometric view*/
     transform: rotateZ(45deg) rotate3d(1, -1, 0, 60deg);
