--- a/src/quiz/quiz.css
+++ b/src/quiz/quiz.css
@@ -17,7 +17,7 @@
     flex-wrap: wrap;
     row-gap: 1rem;
     width: 100vw;
-    margin-top: 1rem;
+    margin-top: 20px;
 }
 
 .question-box {
@@ -25,6 +25,7 @@
     border-color: black;
     background-color: white;
     padding: clamp(2rem, 5vw, 2rem);
+    margin-top: 20px;
 }
 
 .instruction {
@@ -41,26 +42,35 @@
 }
 
 .answer-options {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    row-gap: 1rem;
-    column-gap: 1rem;
-    margin-top: 2rem;
-    margin-left: 10vw;
-    margin-right:10vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    row-gap: 10px;
+    column-gap: 10px;
+    margin-top: 20px;
+    width: 80%;
+    position: absolute;
+    bottom: 100px;
 }
 
 .option {
     background-color: white;
-    width: 45%;
-    height: 3rem;
+    width: 100%;
+    height: 60px;
 }
 
 .confirm-answer {
     position: absolute;
-    bottom: 3rem;
+    bottom: 40px;
     width: 90%;
-    height: 3rem;
+    height: 50px;
+}
+
+@media (max-height: 600px) {
+  .confirm-answer {
+    bottom: 10px;
+  }
+  .answer-options {
+    bottom: 70px;
+  }
 }
